Showing spinner while loading application data

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
   testCompile 'junit:junit:4.12'
   compile 'com.jakewharton.timber:timber:4.1.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
+  compile 'io.reactivex:rxjava:1.1.0'
+  compile 'io.reactivex:rxandroid:1.1.0'
+  compile 'io.reactivex:rxkotlin:0.30.1'
 }
