--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest package="ddiehl.batchuninstaller"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <application android:name=".CustomApplication"
+  <application
+      android:name=".CustomApplication"
       android:allowBackup="true"
       android:label="@string/app_name"
+      android:icon="@mipmap/ic_launcher"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
     <activity android:name=".MainActivity">
