Retrieving size for all installed applications

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest package="ddiehl.batchuninstaller"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <uses-permission android:name="android.permission.GET_PACKAGE_SIZE"/>
+
   <application
       android:name=".CustomApplication"
       android:allowBackup="true"
