Activate ActionMode.Callback when tapping list items

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,8 @@ dependencies {
   compile 'com.android.support:appcompat-v7:23.1.1'
   testCompile 'junit:junit:4.12'
   compile 'com.jakewharton.timber:timber:4.1.0'
-  compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'io.reactivex:rxjava:1.1.0'
   compile 'io.reactivex:rxandroid:1.1.0'
   compile 'io.reactivex:rxkotlin:0.30.1'
+  compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
 }
