--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,21 +24,22 @@ android {
 }
 
 dependencies {
-  compile fileTree(include: ['*.jar'], dir: 'libs')
+  compile fileTree(include: ["*.jar"], dir: "libs")
   compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  compile 'org.jetbrains.anko:anko-sdk19:0.8'
-  compile 'org.jetbrains.anko:anko-support-v4:0.8'
-  compile 'org.jetbrains.anko:anko-appcompat-v7:0.8'
-  compile 'org.jetbrains.anko:anko-recyclerview-v7:0.8'
-  compile 'com.android.support:support-v4:23.1.1'
-  compile 'com.android.support:support-annotations:23.1.1'
-  compile 'com.android.support:recyclerview-v7:23.1.1'
-  compile 'com.android.support:design:23.1.1'
-  compile 'com.android.support:appcompat-v7:23.1.1'
-  testCompile 'junit:junit:4.12'
-  compile 'com.jakewharton.timber:timber:4.1.0'
-  compile 'io.reactivex:rxjava:1.1.0'
-  compile 'io.reactivex:rxandroid:1.1.0'
-  compile 'io.reactivex:rxkotlin:0.30.1'
-  compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
+  compile "org.jetbrains.anko:anko-sdk19:$anko_version"
+  compile "org.jetbrains.anko:anko-support-v4:$anko_version"
+  compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+  compile "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
+//  compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+  compile "com.android.support:support-v4:$support_version"
+  compile "com.android.support:support-annotations:$support_version"
+  compile "com.android.support:recyclerview-v7:$support_version"
+  compile "com.android.support:design:$support_version"
+  compile "com.android.support:appcompat-v7:$support_version"
+  testCompile "junit:junit:4.12"
+  compile "com.jakewharton.timber:timber:4.1.0"
+  compile "io.reactivex:rxjava:1.1.0"
+  compile "io.reactivex:rxandroid:1.1.0"
+  compile "io.reactivex:rxkotlin:0.40.1"
+  compile "com.bignerdranch.android:recyclerview-multiselect:0.2"
 }
