--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,44 +2,36 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.2"
+    compileSdkVersion COMPILE_SDK_VERSION
+    buildToolsVersion BUILD_TOOLS_VERSION
 
-  defaultConfig {
-    applicationId "ddiehl.batchuninstaller"
-    minSdkVersion 16
-    targetSdkVersion 23
-    versionCode 1
-    versionName "1.0"
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    defaultConfig {
+        applicationId "ddiehl.batchuninstaller"
+        minSdkVersion 21
+        targetSdkVersion TARGET_SDK_VERSION
+        versionCode 1
+        versionName "1.0"
     }
-  }
-  sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
-  }
 }
 
 dependencies {
-  compile fileTree(include: ["*.jar"], dir: "libs")
-  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  compile "org.jetbrains.anko:anko-sdk19:$anko_version"
-  compile "org.jetbrains.anko:anko-support-v4:$anko_version"
-  compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
-  compile "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
-//  compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-  compile "com.android.support:support-v4:$support_version"
-  compile "com.android.support:support-annotations:$support_version"
-  compile "com.android.support:recyclerview-v7:$support_version"
-  compile "com.android.support:design:$support_version"
-  compile "com.android.support:appcompat-v7:$support_version"
-  testCompile "junit:junit:4.12"
-  compile "com.jakewharton.timber:timber:4.1.0"
-  compile "io.reactivex:rxjava:1.1.0"
-  compile "io.reactivex:rxandroid:1.1.0"
-  compile "io.reactivex:rxkotlin:0.40.1"
-  compile "com.bignerdranch.android:recyclerview-multiselect:0.2"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
+    compile "org.jetbrains.anko:anko-sdk19:0.8.2"
+    compile "org.jetbrains.anko:anko-support-v4:0.8.2"
+    compile "org.jetbrains.anko:anko-appcompat-v7:0.8.2"
+    compile "org.jetbrains.anko:anko-recyclerview-v7:0.8.2"
+
+    compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+
+    compile "com.jakewharton.timber:timber:4.1.0"
+
+    compile "io.reactivex:rxjava:1.1.0"
+    compile "io.reactivex:rxandroid:1.1.0"
+    compile "io.reactivex:rxkotlin:0.40.1"
+
+    compile "com.bignerdranch.android:recyclerview-multiselect:0.2"
 }
