--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,33 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-  ext.support_version = "23.1.1"
-  ext.kotlin_version = '1.0.0'
-  ext.anko_version = '0.8.2'
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:2.0.0-beta5'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    ext {
+        ANDROID_GRADLE_PLUGIN = '2.3.0'
+        BUILD_TOOLS_VERSION = '25.0.2'
+        COMPILE_SDK_VERSION = 25
+        TARGET_SDK_VERSION = 25
 
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
-  }
+        SUPPORT_LIBRARY_VERSION = '25.1.0'
+        KOTLIN_VERSION = '1.1.1'
+    }
+
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
 allprojects {
-  repositories {
-    jcenter()
-  }
+    repositories {
+        jcenter()
+    }
 }
 
 task clean(type: Delete) {
-  delete rootProject.buildDir
+    delete rootProject.buildDir
 }
