--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,10 @@ android {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
-    compile "org.jetbrains.anko:anko-sdk19:0.8.2"
-    compile "org.jetbrains.anko:anko-support-v4:0.8.2"
-    compile "org.jetbrains.anko:anko-appcompat-v7:0.8.2"
-    compile "org.jetbrains.anko:anko-recyclerview-v7:0.8.2"
+    compile "org.jetbrains.anko:anko-sdk19:$ANKO_VERSION"
+    compile "org.jetbrains.anko:anko-support-v4:$ANKO_VERSION"
+    compile "org.jetbrains.anko:anko-appcompat-v7:$ANKO_VERSION"
+    compile "org.jetbrains.anko:anko-recyclerview-v7:$ANKO_VERSION"
 
     compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
@@ -29,9 +29,12 @@ dependencies {
 
     compile "com.jakewharton.timber:timber:4.1.0"
 
-    compile "io.reactivex:rxjava:1.1.0"
-    compile "io.reactivex:rxandroid:1.1.0"
-    compile "io.reactivex:rxkotlin:0.40.1"
+//    compile "io.reactivex:rxjava:1.1.0"
+//    compile "io.reactivex:rxandroid:1.1.0"
+//    compile "io.reactivex:rxkotlin:0.40.1"
+
+    compile "io.reactivex.rxjava2:rxjava:$RXJAVA2_VERSION"
+    compile "io.reactivex.rxjava2:rxandroid:$RXJAVA2_ANDROID_VERSION"
 
     compile "com.bignerdranch.android:recyclerview-multiselect:0.2"
 }
