--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,12 @@ buildscript {
         COMPILE_SDK_VERSION = 25
         TARGET_SDK_VERSION = 25
 
-        SUPPORT_LIBRARY_VERSION = '25.1.0'
+        SUPPORT_LIBRARY_VERSION = '25.3.1'
         KOTLIN_VERSION = '1.1.1'
+        ANKO_VERSION = "0.8.2"
+
+        RXJAVA2_VERSION = "2.0.8"
+        RXJAVA2_ANDROID_VERSION = "2.0.1"
     }
 
     repositories {
