--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         COMPILE_SDK_VERSION = 25
         TARGET_SDK_VERSION = 25
 
-        SUPPORT_LIBRARY_VERSION = '25.3.1'
-        KOTLIN_VERSION = '1.1.1'
+        SUPPORT_LIBRARY_VERSION = '25+'
+        KOTLIN_VERSION = '1.1.3-2'
         ANKO_VERSION = "0.8.2"
 
         RXJAVA2_VERSION = "2.0.8"
@@ -18,7 +18,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha7'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
 
         // NOTE: Do not place your application dependencies here; they belong
