--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         COMPILE_SDK_VERSION = 25
         TARGET_SDK_VERSION = 25
 
-        SUPPORT_LIBRARY_VERSION = '25+'
+        SUPPORT_LIBRARY_VERSION = '25.4.0'
         KOTLIN_VERSION = '1.1.3-2'
         ANKO_VERSION = "0.8.2"
 
