--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 buildscript {
     ext {
-        ANDROID_GRADLE_PLUGIN = '2.3.0'
-        BUILD_TOOLS_VERSION = '25.0.2'
-        COMPILE_SDK_VERSION = 25
-        TARGET_SDK_VERSION = 25
+        ANDROID_GRADLE_PLUGIN = '3+'
+        BUILD_TOOLS_VERSION = '26'
+        COMPILE_SDK_VERSION = 26
+        TARGET_SDK_VERSION = 26
 
-        SUPPORT_LIBRARY_VERSION = '25.1.0'
-        KOTLIN_VERSION = '1.1.1'
+        SUPPORT_LIBRARY_VERSION = '26+'
+        KOTLIN_VERSION = '1.1.3-2'
+        ANKO_VERSION = "0.8.2"
+
+        RXJAVA2_VERSION = "2.0.8"
+        RXJAVA2_ANDROID_VERSION = "2.0.1"
     }
 
     repositories {
@@ -14,7 +18,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha7'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
 
         // NOTE: Do not place your application dependencies here; they belong
