--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         RXJAVA2_VERSION = "2.0.8"
         RXJAVA2_ANDROID_VERSION = "2.0.1"
         TIMBER_VERSION = "4.5.1"
+        RECYCLERVIEW_MULTISELECT_VERSION = "0.2"
     }
 
     repositories {
