--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
   <uses-permission android:name="android.permission.GET_PACKAGE_SIZE"/>
 
   <application
-      android:name=".CustomApplication"
+      android:name=".BatchUninstallerApp"
       android:allowBackup="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
