--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
       android:icon="@mipmap/ic_launcher"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".view.MainActivity">
+    <activity android:name=".applist.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
