--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
 
-        SUPPORT_LIBRARY_VERSION = '26+'
+        SUPPORT_LIBRARY_VERSION = '26.0.0'
         KOTLIN_VERSION = '1.1.3-2'
         ANKO_VERSION = "0.8.2"
 
@@ -22,9 +22,6 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
