--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
   <uses-permission android:name="android.permission.GET_PACKAGE_SIZE"/>
 
   <application
-      android:name=".CustomApplication"
+      android:name=".BatchUninstallerApp"
       android:allowBackup="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".view.MainActivity">
+    <activity android:name=".applist.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
