--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 buildscript {
     ext {
-        ANDROID_GRADLE_PLUGIN = '3+'
-        BUILD_TOOLS_VERSION = '26'
+        ANDROID_GRADLE_PLUGIN = '3.0.0-alpha8'
+        BUILD_TOOLS_VERSION = '26.0.1'
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
 
-        SUPPORT_LIBRARY_VERSION = '26+'
+        SUPPORT_LIBRARY_VERSION = '26.0.0'
         KOTLIN_VERSION = '1.1.3-2'
         ANKO_VERSION = "0.8.2"
 
         RXJAVA2_VERSION = "2.0.8"
         RXJAVA2_ANDROID_VERSION = "2.0.1"
+        TIMBER_VERSION = "4.5.1"
+        RECYCLERVIEW_MULTISELECT_VERSION = "0.2"
     }
 
     repositories {
@@ -18,11 +20,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha7'
+        classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_PLUGIN"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
