--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,14 @@ buildscript {
         KOTLIN_VERSION = '1.1.3-2'
         ANKO_VERSION = "0.8.2"
 
-        RXJAVA2_VERSION = "2.0.8"
-        RXJAVA2_ANDROID_VERSION = "2.0.1"
-        TIMBER_VERSION = "4.5.1"
-        RECYCLERVIEW_MULTISELECT_VERSION = "0.2"
+        RXJAVA2_VERSION = '2.0.8'
+        RXJAVA2_ANDROID_VERSION = '2.0.1'
+        TIMBER_VERSION = '4.5.1'
+        RECYCLERVIEW_MULTISELECT_VERSION = '0.2'
+
+        JUNIT_VERSION = "4.12"
+        ANDROID_TESTING_SUPPORT_VERSION = '1.0.0'
+        MOCKITO_VERSION = "2.8.47"
     }
 
     repositories {
