--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,9 @@ buildscript {
         TIMBER_VERSION = '4.5.1'
         RECYCLERVIEW_MULTISELECT_VERSION = '0.2'
 
-        JUNIT_VERSION = "4.12"
+        JUNIT_VERSION = '4.12'
         ANDROID_TESTING_SUPPORT_VERSION = '1.0.0'
-        MOCKITO_VERSION = "2.8.47"
+        MOCKITO_VERSION = '2.8.47'
     }
 
     repositories {
