--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,22 @@
 buildscript {
     ext {
-        ANDROID_GRADLE_PLUGIN = '3.0.0-alpha9'
+        ANDROID_GRADLE_PLUGIN = '3.0.0-beta5'
         BUILD_TOOLS_VERSION = '26.0.1'
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
 
         SUPPORT_LIBRARY_VERSION = '26.0.0'
-        KOTLIN_VERSION = '1.1.3-2'
+        KOTLIN_VERSION = '1.1.4-3'
         ANKO_VERSION = "0.8.2"
 
-        RXJAVA2_VERSION = "2.0.8"
-        RXJAVA2_ANDROID_VERSION = "2.0.1"
-        TIMBER_VERSION = "4.5.1"
-        RECYCLERVIEW_MULTISELECT_VERSION = "0.2"
+        RXJAVA2_VERSION = '2.0.8'
+        RXJAVA2_ANDROID_VERSION = '2.0.1'
+        TIMBER_VERSION = '4.5.1'
+        RECYCLERVIEW_MULTISELECT_VERSION = '0.2'
+
+        JUNIT_VERSION = '4.12'
+        ANDROID_TESTING_SUPPORT_VERSION = '1.0.0'
+        MOCKITO_VERSION = '2.8.47'
     }
 
     repositories {
