--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".applist.MainActivity">
+        <activity android:name=".applist.AppListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
