--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /build
 /captures
 projectFilesBackup/
+
+# Internal keys
+# app/src/main/res/values/com_crashlytics_export_strings.xml
+app/fabric.properties
+app/keys/release
