--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         ANDROID_GRADLE_PLUGIN = '3.0.0-beta6'
         FABRIC_PLUGIN_VERSION = '1.24.1'
+        CRASHLYTICS_VERSION = '2.6.8'
         BUILD_TOOLS_VERSION = '26.0.1'
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
