--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'io.fabric'
 
 repositories {
     google()
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 android {
@@ -18,6 +20,24 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+    }
+
+    signingConfigs {
+        debug {
+            storeFile file('keys/debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+        release.initWith(debug)
+    }
+
+    def keystoreProperties = getProperties("quizlet-android-app/keys/release/keystore.properties")
+    if (keystoreProperties != null) {
+        signingConfigs.release.storeFile = file(keystoreProperties['storeFile'])
+        signingConfigs.release.storePassword = keystoreProperties['storePassword']
+        signingConfigs.release.keyAlias = keystoreProperties['keyAlias']
+        signingConfigs.release.keyPassword = keystoreProperties['keyPassword']
     }
 }
 
@@ -36,6 +56,11 @@ dependencies {
     compile "io.reactivex.rxjava2:rxandroid:$RXJAVA2_ANDROID_VERSION"
     compile "com.bignerdranch.android:recyclerview-multiselect:$RECYCLERVIEW_MULTISELECT_VERSION"
 
+    // Crashlytics
+    compile("com.crashlytics.sdk.android:crashlytics:$CRASHLYTICS_VERSION@aar") {
+        transitive = true
+    }
+
     // Test dependencies
     testCompile "junit:junit:$JUNIT_VERSION"
     androidTestCompile "com.android.support.test:runner:$ANDROID_TESTING_SUPPORT_VERSION"
@@ -53,4 +78,13 @@ dependencies {
 //    // The following Espresso dependency can be either "compile"
 //    // or "androidTestCompile", depending on your app's implementation
 //    androidTestCompile 'com.android.support.test.espresso:espresso-idling-resource:3.0.0'
+}
+
+private Properties getProperties(def filePath) {
+    def propertiesFile = rootProject.file(filePath)
+    if (!propertiesFile.exists()) return null
+
+    def properties = new Properties()
+    properties.load(new FileInputStream(propertiesFile))
+    return properties
 }
