--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 buildscript {
     ext {
-        ANDROID_GRADLE_PLUGIN = '3.0.0-beta6'
+        ANDROID_GRADLE_PLUGIN = '3.0.1'
         FABRIC_PLUGIN_VERSION = '1.24.1'
         CRASHLYTICS_VERSION = '2.6.8'
-        BUILD_TOOLS_VERSION = '26.0.1'
+        BUILD_TOOLS_VERSION = '26.0.2'
         COMPILE_SDK_VERSION = 26
         TARGET_SDK_VERSION = 26
 
         SUPPORT_LIBRARY_VERSION = '26.1.0'
-        KOTLIN_VERSION = '1.1.4-3'
+        KOTLIN_VERSION = '1.2.20'
         ANKO_VERSION = "0.8.2"
 
         RXJAVA2_VERSION = '2.0.8'
