--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,44 +72,33 @@ android {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
 
-    compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
-    compile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
-    compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
-    compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
-    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+    implementation "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
+    implementation "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
+    implementation "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
+    implementation "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+    implementation "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
 
-    compile "com.jakewharton.timber:timber:$TIMBER_VERSION"
+    implementation "com.jakewharton.timber:timber:$TIMBER_VERSION"
 
-    compile "io.reactivex.rxjava2:rxjava:$RXJAVA2_VERSION"
-    compile "io.reactivex.rxjava2:rxandroid:$RXJAVA2_ANDROID_VERSION"
-    compile "com.bignerdranch.android:recyclerview-multiselect:$RECYCLERVIEW_MULTISELECT_VERSION"
+    implementation "io.reactivex.rxjava2:rxjava:$RXJAVA2_VERSION"
+    implementation "io.reactivex.rxjava2:rxandroid:$RXJAVA2_ANDROID_VERSION"
+    implementation "com.bignerdranch.android:recyclerview-multiselect:$RECYCLERVIEW_MULTISELECT_VERSION"
 
     // Crashlytics
-    compile("com.crashlytics.sdk.android:crashlytics:$CRASHLYTICS_VERSION@aar") {
+    implementation("com.crashlytics.sdk.android:crashlytics:$CRASHLYTICS_VERSION@aar") {
         transitive = true
     }
 
-    compile 'com.github.damien5314:TimeSinceTextView:1.3'
+    implementation 'com.github.damien5314:TimeSinceTextView:1.3'
 
     // Test dependencies
-    testCompile "junit:junit:$JUNIT_VERSION"
-    androidTestCompile "com.android.support.test:runner:$ANDROID_TESTING_SUPPORT_VERSION"
-    androidTestCompile "com.android.support.test:rules:$ANDROID_TESTING_SUPPORT_VERSION"
+    testImplementation "junit:junit:$JUNIT_VERSION"
+    androidTestImplementation "com.android.support.test:runner:$ANDROID_TESTING_SUPPORT_VERSION"
+    androidTestImplementation "com.android.support.test:rules:$ANDROID_TESTING_SUPPORT_VERSION"
     androidTestImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     androidTestImplementation "org.mockito:mockito-android:$MOCKITO_VERSION"
-
-    // Espresso dependencies
-//    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.0'
-//    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:3.0.0'
-//    androidTestCompile 'com.android.support.test.espresso:espresso-intents:3.0.0'
-//    androidTestCompile 'com.android.support.test.espresso:espresso-accessibility:3.0.0'
-//    androidTestCompile 'com.android.support.test.espresso:espresso-web:3.0.0'
-//    androidTestCompile 'com.android.support.test.espresso.idling:idling-concurrent:3.0.0'
-//    // The following Espresso dependency can be either "compile"
-//    // or "androidTestCompile", depending on your app's implementation
-//    androidTestCompile 'com.android.support.test.espresso:espresso-idling-resource:3.0.0'
 }
 
 private Properties getProperties(def filePath) {
