--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.2.61'
+
     ext {
         ANDROID_GRADLE_PLUGIN = '3.1.0'
         FABRIC_PLUGIN_VERSION = '1.26.0'
@@ -31,7 +33,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
         // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
         classpath "io.fabric.tools:gradle:$FABRIC_PLUGIN_VERSION"
-    }
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
 allprojects {
