add shim to define app name at build time

--- a/hello-world/build.gradle
+++ b/hello-world/build.gradle
@@ -36,6 +36,7 @@ android {
             signingConfig signingConfigs.debug
             debuggable true
             minifyEnabled false
+            resValue "string", "generated_app_name", "${getAppName()}"
         }
     }
 }
@@ -46,4 +47,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+
+private String getAppName() {
+    if (project.hasProperty("myappname")) {
+        return project.myappname
+    } else {
+        return "Hello World"
+    }
 }
