--- a/hello-world/src/main/AndroidManifest.xml
+++ b/hello-world/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:allowBackup="false"
         android:supportsRtl="true">
 
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/generated_app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
