--- a/hello-world/build.gradle
+++ b/hello-world/build.gradle
@@ -36,6 +36,7 @@ android {
             signingConfig signingConfigs.debug
             debuggable true
             minifyEnabled false
+            applicationIdSuffix ".${getAppName()}"
             resValue "string", "generated_app_name", "${getAppName()}"
         }
     }
