--- a/hello-world/src/main/AndroidManifest.xml
+++ b/hello-world/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
 
     <application
         android:allowBackup="false"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:label="@string/generated_app_name">
 
         <activity
             android:name=".MainActivity"
