--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,12 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
+
 android {
     compileSdkVersion COMPILE_SDK_VERSION
 
@@ -71,6 +77,8 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$COROUTINES_VERSION"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$COROUTINES_VERSION"
 
     implementation "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
     implementation "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
