--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
         TARGET_SDK_VERSION = 28
 
         SUPPORT_LIBRARY_VERSION = '28.0.0'
-        KOTLIN_VERSION = '1.2.61'
+        KOTLIN_VERSION = '1.3.50'
+        COROUTINES_VERSION = '1.3.1'
 
         RXJAVA2_VERSION = '2.1.13'
         RXJAVA2_ANDROID_VERSION = '2.0.1'
