--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ android:
 
     # The SDK version used to compile your project
     - android-28
+  licenses:
+    - build-tools;28.0.3 Android SDK Build-Tools 28.0.3
