--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ android:
     # The SDK version used to compile your project
     - android-28
   licenses:
-    - build-tools;28.0.3 Android SDK Build-Tools 28.0.3
+    - build-tools;28.0.3 # Android SDK Build-Tools 28.0.3
+    - platforms;android-28 # Android SDK Platform 28
