--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: android
 dist: trusty
+before_install:
+  - echo yes | sdkmanager "build-tools;28.0.3"
 android:
   components:
     # Uncomment the lines below if you want to
@@ -12,6 +14,3 @@ android:
 
     # The SDK version used to compile your project
     - android-28
-  licenses:
-    - 'build-tools;28.0.3' # Android SDK Build-Tools 28.0.3
-    - 'platforms;android-28' # Android SDK Platform 28
