--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 before_install:
   - echo yes | sdkmanager "build-tools;28.0.3"
 script:
-  - gw :app:build :app:connectedCheck
+  - ./gradlew :app:build :app:connectedCheck
 android:
   components:
     # Uncomment the lines below if you want to
