--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: android
 dist: trusty
 before_install:
   - echo yes | sdkmanager "build-tools;28.0.3"
+before_script:
+  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 script:
   - ./gradlew :app:build :app:connectedCheck
 android:
@@ -16,3 +21,4 @@ android:
 
     # The SDK version used to compile your project
     - android-28
+    - sys-img-armeabi-v7a-android-28
