--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 before_install:
   - echo yes | sdkmanager "build-tools;28.0.3"
 before_script:
-  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-28 --abi x86 -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
@@ -21,4 +21,4 @@ android:
 
     # The SDK version used to compile your project
     - android-28
-    - sys-img-armeabi-v7a-android-17
+    - sys-img-x86-android-26
