--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 before_install:
   - echo yes | sdkmanager "build-tools;28.0.3"
 before_script:
-  - echo no | android create avd --force -n test -t android-28 --abi x86 -c 100M
+  - echo no | android create avd --force -n test -k "system-images;android-29;google_apis_playstore;x86"
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
